--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^1.0.6",
     "@types/react": "^18.0.25",
+    "axios": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
