--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=thisecommerce
 MONGODB_URI=mongodb+srv://nextcommerce:commerce@cluster0.wqulpgi.mongodb.net/next12-commerce1?retryWrites=true&w=majority
